@@ -1,11 +1,11 @@
 README:  Tcl
-    This is the Tcl 8.4a4 source distribution.
+    This is the Tcl 8.4a5 source distribution.
     Tcl/Tk is also available through NetCVS:
 	http://tcl.sourceforge.net/
     You can get any source release of Tcl from the file distributions
     link at the above URL.
 
-RCS: @(#) $Id: README,v 1.40 2002/03/04 23:26:03 hobbs Exp $
+RCS: @(#) $Id: README,v 1.41 2002/03/06 15:20:23 dkf Exp $
 
 Contents
 --------
