@@ -1,7 +1,7 @@
-# $Id: tcl.spec,v 1.9 2002/03/05 20:31:42 hobbs Exp $
+# $Id: tcl.spec,v 1.10 2002/03/06 15:20:23 dkf Exp $
 # This file is the basis for a binary Tcl RPM for Linux.
 
-%define version 8.4a4
+%define version 8.4a5
 %define directory /usr/local
 
 Summary: Tcl scripting language development environment
