@@ -1,11 +1,11 @@
 Tcl/Tk 8.4 for Windows, Binary Distribution
 
-RCS: @(#) $Id: README.binary,v 1.27 2002/03/04 23:26:03 hobbs Exp $ 
+RCS: @(#) $Id: README.binary,v 1.28 2002/03/06 15:20:23 dkf Exp $ 
 
 1. Introduction
 --------------- 
 
-This directory contains the binary distribution of Tcl/Tk 8.4a4 for
+This directory contains the binary distribution of Tcl/Tk 8.4a5 for
 Windows.  It was compiled with Microsoft Visual C++ 6.0 using Win32
 API, so that it will run under Windows NT, 95, 98 and 2000.
 
