@@ -3,14 +3,14 @@
 # generate the file "configure", which is run during Tcl installation
 # to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.46 2002/01/11 20:46:34 mdejong Exp $
+# RCS: @(#) $Id: configure.in,v 1.47 2002/03/06 15:20:23 dkf Exp $
 
 AC_INIT(../generic/tcl.h)
 
 TCL_VERSION=8.4
 TCL_MAJOR_VERSION=8
 TCL_MINOR_VERSION=4
-TCL_PATCH_LEVEL="a4"
+TCL_PATCH_LEVEL="a5"
 VER=$TCL_MAJOR_VERSION$TCL_MINOR_VERSION
 
 TCL_DDE_VERSION=1.2
